feat: AI Product Owner audit fixes - security, CRUD, UX improvements
Security Fixes:
- Add @PreAuthorize to RoleController + PermissionController (privilege escalation fix)
- Restrict actuator endpoints to health/info only (25 services)
- Add security headers filter (XSS, CSP, HSTS, X-Frame-Options)
- Fix UserController.updateUserStatus authorization

Tenant Isolation:
- Add Hibernate @Filter for tenant isolation on BaseEntity
- Create TenantFilterAspect for automatic READ-side tenant filtering

Frontend - New Modules:
- Scheduling module: CRUD for Appointments, Availability, Schedule Templates
- Survey module: CRUD for Surveys, Templates, Responses
- Detail pages for CRM Leads, Opportunities, and Calls

Frontend - UX Improvements:
- Replace mock data in Dashboard with real API integration
- Add CommonSearch + SavedFilters to Billing, Notifications, Automation, Webhooks
- Fix broken links (Call ID, Ticket ID in customer detail)
- Add Suspense boundary for useSearchParams pages
- Add sorting to all data tables

Backend Improvements:
- Fix ReportingDataService with real database queries
- Fix DashboardService stats aggregation
- Fix EmailNotificationService template variable parsing
- Add Restore functionality for soft-deleted records
- Create TenantAwareRepository base with findDeleted/restore methods
- Create BaseKafkaEventPublisher to reduce code duplication
- Add Redis @Cacheable for roles, permissions, tenants

Co-Authored-By: opencode <noreply@opencode.ai>